@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
  * Boston, MA 02110-1301, USA.  
  *
- * $Id: twistedpair.h,v 1.2 2007/03/06 18:21:32 ela Exp $
+ * $Id: twistedpair.h,v 1.3 2007/03/07 18:00:37 ela Exp $
  *
  */
 
@@ -29,6 +29,7 @@ class twistedpair : public circuit
 {
  public:
   twistedpair ();
+  void initSP (void);
   void calcSP (nr_double_t);
   void calcNoiseSP (nr_double_t);
   void initDC (void);
@@ -41,6 +42,7 @@ class twistedpair : public circuit
  private:
   void calcPropagation (nr_double_t);
   nr_double_t calcLoss (nr_double_t);
+  nr_double_t calcLength (void);
 
  private:
   nr_double_t zl, ereff, alpha, beta, len, angle;
